# gysoplayer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/study/gysoffmpegapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  CallbackHelper.cpp  CallbackHelper.h  GySoPlayer.cpp  GySoPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/study/gysoffmpegapplication/: GySoPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/study/gysoffmpegapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
note/: 1 FFmpeg导读及常用命令.md  2 Android搭建FFmpeg开发环境.md  3 音频解码视频解码及同步处理.md  4 音视频Android项目框架.md  5 FFmpeg视频解码及安全队列.md  6 FFmpeg音频解码及音视频同步.md  7 ffmpeg seek及停止释放.md  8 推流服务器及客户端开发环境的配置.md  9 视频RTMP推流.md  H264编码格式.md  学习过程.md
